# playground

./: .coverage  .coveragerc  .coveralls.yml  .gitignore  .travis.yml  .ycm_extra_conf.py  404.md  CMakeLists.txt  DEPENDENCIES  LICENSE  MANIFEST.in  NOTES  README.md  TODO  cmake_install.cmake  documentation.html  index.html  requirements.txt  setup.py  sidebar.md  tags
benchmark/symbolic_regression/: brute_param_sweep.py
benchmark/tree_evaluators/: benchmark.py
css/: style.css
docs/: cartesian.dia  cartesian.dia~  config.md  functions.md  play.md  population.md  sidebar.md  tree.md
docs/api/: population.md
docs/examples/: gp-symbolic_regression.md
docs/manual/: genetic_programming.md
docs/operators/: crossover.md  mutation.md  selcetion.md
examples/bio_detector/: bio_detector.py
examples/center_cart/: center_cart.py
examples/classifier/: classifier.py  demo.py
examples/climbing/: hill_climbing.py
examples/hello_world/: hello_world.py
examples/observer/: color_detector.py  color_observer.py  observer.py  observer2.py
js/: mdoc.js
pages/: 404.md  sidebar.md
playground/: config.py  data_loader.py  evaluator.py  functions.py  individual.py  initializer.py  node.py  play.py  population.py  selection.py  tree.py  tree_evaluation.py
playnode/: playnode.py
src/: CMakeLists.txt  gui_window.cpp  world.cpp
tests/: .coverage  config_tests.py  data_loader_tests.py  evaluator_tests.py  functions_tests.py  initializer_tests.py  node_tests.py  play_tests.py  selection_tests.py  tree_evaluation_tests.py  tree_tests.py  unittest_runner.py
(+199 files in other folders)
