CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_DEBUG "-Wall -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -DNDEBUG")

INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(/usr/include/)
INCLUDE_DIRECTORIES(/usr/include/c++/4.7)
INCLUDE_DIRECTORIES(/usr/local/include/)

LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(/usr/lib/x86_64_linux-gnu)
LINK_DIRECTORIES(/usr/local/lib)

# gui window
ADD_EXECUTABLE(gui_window gui_window.cpp)
TARGET_LINK_LIBRARIES(gui_window GL)
TARGET_LINK_LIBRARIES(gui_window GLEW)
TARGET_LINK_LIBRARIES(gui_window glfw)
